--- a/OpenGL C++ projekt/Homogenous cordinates/Homogenous cordinates/Homogenous cordinates.vcxproj
+++ b/OpenGL C++ projekt/Homogenous cordinates/Homogenous cordinates/Homogenous cordinates.vcxproj
@@ -21,6 +21,16 @@
   <ItemGroup>
     <ClCompile Include="src\glad.c" />
     <ClCompile Include="src\Main.cpp" />
+    <ClCompile Include="src\Shader.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="assets\fragment_core.glsl" />
+    <None Include="assets\fragment_core2.glsl" />
+    <None Include="assets\vertex_core.glsl" />
+    <None Include="glfw3.dll" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="src\Shader.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
