IO classes implemented

--- a/OpenGL C++ projekt/Homogenous cordinates/Homogenous cordinates/Homogenous cordinates.vcxproj
+++ b/OpenGL C++ projekt/Homogenous cordinates/Homogenous cordinates/Homogenous cordinates.vcxproj
@@ -20,6 +20,8 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\glad.c" />
+    <ClCompile Include="src\io\Keyboard.cpp" />
+    <ClCompile Include="src\io\Mouse.cpp" />
     <ClCompile Include="src\Main.cpp" />
     <ClCompile Include="src\Shader.cpp" />
   </ItemGroup>
@@ -30,6 +32,8 @@
     <None Include="glfw3.dll" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\io\Keyboard.h" />
+    <ClInclude Include="src\io\Mouse.h" />
     <ClInclude Include="src\Shader.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
