--- a/OpenGL C++ projekt/Homogenous cordinates/Homogenous cordinates/Homogenous cordinates.vcxproj.filters
+++ b/OpenGL C++ projekt/Homogenous cordinates/Homogenous cordinates/Homogenous cordinates.vcxproj.filters
@@ -21,7 +21,7 @@
     <ClCompile Include="src\Main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="src\Shader.cpp">
+    <ClCompile Include="graphics\Shader.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="src\io\Keyboard.cpp">
@@ -33,15 +33,20 @@
     <ClCompile Include="src\io\Camera.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\graphics\Shader.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\io\Screen.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <None Include="assets\vertex_core.glsl" />
-    <None Include="assets\fragment_core2.glsl" />
-    <None Include="assets\fragment_core.glsl" />
+    <None Include="assets\object.vs" />
+    <None Include="assets\object.fs" />
     <None Include="glfw3.dll" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="src\Shader.h">
+    <ClInclude Include="graphics\Shader.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\io\Keyboard.h">
@@ -51,6 +56,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\io\Camera.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\graphics\Shader.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\io\Screen.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
