--- a/OpenGL C++ projekt/Homogenous cordinates/Homogenous cordinates/imgui.ini
+++ b/OpenGL C++ projekt/Homogenous cordinates/Homogenous cordinates/imgui.ini
@@ -1,8 +1,8 @@
 [Window][Debug##Default]
-Pos=60,60
+Pos=0,0
 Size=400,400
 
-[Window][ImGui]
-Pos=60,60
-Size=227,167
+[Window][Ovládacie prvky]
+Pos=0,0
+Size=280,200
 
