--- a/OpenGL C++ projekt/Homogenous cordinates/Homogenous cordinates/Homogenous cordinates.vcxproj.filters
+++ b/OpenGL C++ projekt/Homogenous cordinates/Homogenous cordinates/Homogenous cordinates.vcxproj.filters
@@ -45,10 +45,15 @@
     <ClCompile Include="src\gui\MyGui.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\graphics\models\PlaneCordinates.hpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="assets\object.vs" />
     <None Include="assets\object.fs" />
+    <None Include="assets\transparentObject.vs" />
+    <None Include="assets\transparentObject.fs" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\io\Keyboard.h">
@@ -85,6 +90,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\gui\MyGui.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\graphics\models\ProjectivePlane.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
