Axis letter marks added, point out of plane visualization function added

--- a/OpenGL C++ projekt/Homogenous cordinates/Homogenous cordinates/Homogenous cordinates.vcxproj
+++ b/OpenGL C++ projekt/Homogenous cordinates/Homogenous cordinates/Homogenous cordinates.vcxproj
@@ -37,6 +37,7 @@
     <None Include="assets\transparentObject.vs" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\graphics\models\Arrow.hpp" />
     <ClInclude Include="src\graphics\models\Cube2.hpp" />
     <ClInclude Include="src\graphics\models\ProjectivePlane.hpp" />
     <ClInclude Include="src\graphics\models\Ray.hpp" />
