--- a/OpenGL C++ projekt/Homogenous cordinates/Homogenous cordinates/Homogenous cordinates.vcxproj.filters
+++ b/OpenGL C++ projekt/Homogenous cordinates/Homogenous cordinates/Homogenous cordinates.vcxproj.filters
@@ -92,5 +92,8 @@
     <ClInclude Include="src\graphics\models\ProjectivePlane.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\graphics\models\Arrow.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
