--- a/OpenGL C++ projekt/Homogenous cordinates/Homogenous cordinates/imgui.ini
+++ b/OpenGL C++ projekt/Homogenous cordinates/Homogenous cordinates/imgui.ini
@@ -3,10 +3,11 @@ Pos=0,0
 Size=400,400
 
 [Window][Ovládacie prvky]
-Pos=0,0
+Pos=0,1
 Size=320,280
+Collapsed=1
 
 [Window][Overlay]
-Pos=710,540
+Pos=770,585
 Size=90,60
 
